--- a/src/site/index.html
+++ b/src/site/index.html
@@ -33,7 +33,7 @@
 
           <label class="label">PlaceId</label>
           <div class="control">
-            <input class="input" required="true" id="place_id" placeholder="PlaceId">
+            <input class="input" required="true" id="place_id" placeholder="PlaceId">15710017589</input>
           </div>
         </div>
         <button type="submit" id="submit2" class="button is-primary" style="background-color: rgb(107 33 168);">Set Status</button>
