--- a/src/site/index.html
+++ b/src/site/index.html
@@ -36,7 +36,7 @@
             <input class="input" required="true" id="place_id" placeholder="PlaceId">15710017589</input>
           </div>
         </div>
-        <button type="submit" id="submit2" class="button is-primary" style="background-color: rgb(107 33 168);">Set Status</button>
+        <button type="submit" id="submit" class="button is-primary" style="background-color: rgb(107 33 168);">Set Status</button>
   
       </form>
     </div>
@@ -50,40 +50,10 @@
 
   <script>
     const form = document.getElementById('makerpc')
-    form.addEventListener('submit2', startrpc)
-    form.addEventListener('submit', startrpc2)
+    form.addEventListener('submit', startrpc)
 
 
     async function startrpc(event) {
-      event.preventDefault();
-      const clientid = document.getElementById('clientid').value;
-      const largeimage = document.getElementById('largeimage').value;
-      const smallimage = document.getElementById('smallimage').value;
-      const state = document.getElementById('state').value;
-      const details = document.getElementById('details').value;
-
-      const result = await fetch('http://localhost:3000/api/makerpc', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          clientid,
-          largeimage,
-          smallimage,
-          state,
-          details
-        })
-      }).then((res) => res.json())
-      console.log(result)
-      if (result.status === "ok") {
-
-      } else {
-        alert(result.error)
-      }
-    }
-
-    async function startrpc2(event) {
       event.preventDefault();
       const place_id = document.getElementById('place_id').value;
 
@@ -103,6 +73,8 @@
         alert(result.error)
       }
     }
+
+  
   </script>
 </body>
 
