--- a/src/site/index.html
+++ b/src/site/index.html
@@ -16,45 +16,45 @@
 
     <div class="container">
       <h1 class="title">Pegasus Voice System</h1>
-      <form id="makerpc">
-  
+
         <div class="field">
+        
+          <label class="label">RobloxId</label>
+          <input class="input" id="robloxId" placeholder="RobloxId">327155328</input>
 
-
-
-          <!-- to twoje xd -->
-          <label class="label" for="robloxId">Roblox ID: </label>
-          <input class="input" id="robloxId" name="robloxId"></input>
-          <button class="button is-primary" id="start" style="background-color: rgb(107 33 168); margin-bottom: 3vh; margin-top: 2vh">Połącz się!</button>
-          <div id="audios"></div>
-
-
-
-
-          <label class="label">PlaceId</label>
-          <div class="control">
-            <input class="input" required="true" id="place_id" placeholder="PlaceId">15710017589</input>
-          </div>
         </div>
-        <button type="submit" id="submit" class="button is-primary" style="background-color: rgb(107 33 168);">Set Status</button>
+        <button class="button is-primary" id="start" style="background-color: rgb(107 33 168); margin-bottom: 3vh;">Połącz się!</button>
   
-      </form>
+        <div id="audios"></div>
+
+        <div class="field">
+        
+          <label class="label">PlaceId</label>
+          <input class="input" id="place_id" placeholder="PlaceId">15710017589</input>
+
+        </div>
+        <button id="submit" class="button is-primary" style="background-color: rgb(107 33 168); margin-bottom: 3vh;">Set Status</button>
+  
+
     </div>
   
-
-
   </div>
 
 
 
 
   <script>
-    const form = document.getElementById('makerpc')
-    form.addEventListener('submit', startrpc)
+    //document.getElementById('submit').addEventListener('submit', startrpc)
 
 
-    async function startrpc(event) {
-      event.preventDefault();
+
+    document.getElementById("submit").addEventListener("click", function() {
+      console.log("chujjj")
+      startrpc()
+    });
+
+    async function startrpc() {
+      //event.preventDefault();
       const place_id = document.getElementById('place_id').value;
 
       const result = await fetch('http://localhost:3000/api/rpc', {
