--- a/src/site/index.html
+++ b/src/site/index.html
@@ -295,7 +295,7 @@
     if (!searchingPage.hidden && localPeer) {
       if (!socket) {
         const _socket = new io("https://socket.pegasus.bot", {
-          reconnect: false,
+          reconnection: false,
           query: {
             peer_id: localPeer.id,
             roblox_id: robloxId,
@@ -317,7 +317,7 @@
               } else if (!calls[peerId] && type === "call") {
                 console.log('call someone')
                 calls[peerId] = {}
-                const call = peer.call(peerId, localStream)
+                const call = localPeer.call(peerId, localStream)
                 call.on("stream", (otherStream) => {
                   console.log('received call with stream', otherStream)
                   calls[peerId].call = call;
