--- a/src/site/index.html
+++ b/src/site/index.html
@@ -295,7 +295,7 @@
     if (!searchingPage.hidden && localPeer) {
       if (!socket) {
         const _socket = new io("https://socket.pegasus.bot", {
-          reconnection: false,
+          reconnection: true,
           query: {
             peer_id: localPeer.id,
             roblox_id: robloxId,
