--- a/src/site/index.html
+++ b/src/site/index.html
@@ -82,6 +82,7 @@
   let peer
   let socket
   let calls = {}
+  let audioContext
 
   const showPage = (page) => {
     startPage.hidden = page == startPage ? false : true
@@ -154,6 +155,8 @@
   document.getElementById("start").onclick = async () => {
     if (debounce) return;
     debounce = true
+
+    audioContext = new (window.AudioContext || window.webkitAudioContext)()
 
     if (parseInt(document.getElementById("robloxId").value)) {
       robloxId = parseInt(document.getElementById("robloxId").value)
