--- a/src/site/index.html
+++ b/src/site/index.html
@@ -52,7 +52,7 @@
     </div>
   </div>
   <div id="vcPage" hidden>
-    <div class="flex justify-center items-center h-72 flex-col">
+    <div class="flex justify-center items-center flex-col">
       <h1 class="text-white mb-4 select-none">Poprawnie połączono z kanałem głosowym :)</h1>
     </div>
   </div>
